src/stara_wersja/FraJer/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from FraJer/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pInstr -> Instr                             (0)
	%start_pExpr -> Expr                               (1)
	%start_pStmt -> Stmt                               (2)
	%start_pDef -> Def                                 (3)
	%start_pParams -> Params                           (4)
	%start_pArgs -> Args                               (5)
	%start_pLambda -> Lambda                           (6)
	%start_pSType -> SType                             (7)
	%start_pFType -> FType                             (8)
	Ident -> L_Ident                                   (9)
	Integer -> L_integ                                 (10)
	SType -> 'Int'                                     (11)
	SType -> 'Bool'                                    (12)
	FType -> 'IntFunc'                                 (13)
	FType -> 'BoolFunc'                                (14)
	Expr2 -> Ident '(' Args ')'                        (15)
	Expr2 -> Ident                                     (16)
	Expr2 -> Integer                                   (17)
	Expr2 -> Ident '++'                                (18)
	Expr2 -> '++' Ident                                (19)
	Expr2 -> Ident '--'                                (20)
	Expr2 -> '--' Ident                                (21)
	Expr2 -> Ident '[' Expr ']'                        (22)
	Expr2 -> Ident 'get' '[' Expr ']'                  (23)
	Expr2 -> '(' Expr ')'                              (24)
	Expr2 -> 'true'                                    (25)
	Expr2 -> 'false'                                   (26)
	Expr2 -> '!' Expr2                                 (27)
	Expr2 -> Ident 'has' 'key' '[' Expr ']'            (28)
	Expr -> Expr '+' Expr1                             (29)
	Expr -> Expr '-' Expr1                             (30)
	Expr -> Expr1                                      (31)
	Expr -> Expr 'or' Expr1                            (32)
	Expr -> Expr 'and' Expr1                           (33)
	Expr -> Expr 'xor' Expr1                           (34)
	Expr1 -> Expr1 '/' Expr2                           (35)
	Expr1 -> Expr1 '*' Expr2                           (36)
	Expr1 -> Expr1 '%' Expr2                           (37)
	Expr1 -> Expr2                                     (38)
	Expr1 -> Expr1 '==' Expr2                          (39)
	Expr1 -> Expr1 '<=' Expr2                          (40)
	Expr1 -> Expr1 '>=' Expr2                          (41)
	Expr1 -> Expr1 '<' Expr2                           (42)
	Expr1 -> Expr1 '>' Expr2                           (43)
	Expr1 -> Expr1 '!=' Expr2                          (44)
	Args -> 'void'                                     (45)
	Args -> Expr                                       (46)
	Args -> Expr ',' Args                              (47)
	Args -> Lambda                                     (48)
	Args -> Lambda ',' Args                            (49)
	Params -> 'none'                                   (50)
	Params -> SType Ident                              (51)
	Params -> FType Ident                              (52)
	Params -> SType Ident ',' Params                   (53)
	Params -> FType Ident ',' Params                   (54)
	Lambda -> FType 'lambda' '(' Params ')' '->' '{' Instr '}'   (55)
	Instr -> Instr1 ';' Instr                          (56)
	Instr -> Instr1                                    (57)
	Instr1 -> Def                                      (58)
	Instr1 -> Stmt                                     (59)
	Instr1 -> SpecStmt                                 (60)
	Instr1 -> Instr1 ';'                               (61)
	Def1 -> SType Ident '=' Expr                       (62)
	Def1 -> FType Ident '(' Params ')' '{' Instr '}'   (63)
	Def1 -> 'Array' SType Ident '[' Expr ']' '(' Expr ')'   (64)
	Def1 -> 'Array' SType Ident '[' Expr ']'           (65)
	Def1 -> 'Dict' SType Ident                         (66)
	Def -> Def1                                        (67)
	Stmt1 -> 'if' '(' Expr ')' '{' Instr '}' 'else' '{' Instr '}'   (68)
	Stmt1 -> 'if' '(' Expr ')' '{' Instr '}'           (69)
	Stmt1 -> 'while' '(' Expr ')' '{' Instr '}'        (70)
	Stmt1 -> 'for' '(' Ident '=' Expr 'to' Expr ')' '{' Instr '}'   (71)
	Stmt1 -> 'skip'                                    (72)
	Stmt1 -> 'return' '(' Expr ')'                     (73)
	Stmt1 -> 'print' '(' Expr ')'                      (74)
	Stmt1 -> 'break' '(' Expr ')'                      (75)
	Stmt1 -> 'break'                                   (76)
	Stmt1 -> 'continue' 'outer' '(' Expr ')'           (77)
	Stmt1 -> 'continue'                                (78)
	Stmt1 -> Ident '=' Expr                            (79)
	Stmt1 -> Ident '+=' Expr                           (80)
	Stmt1 -> Ident '-=' Expr                           (81)
	Stmt1 -> Ident '*=' Expr                           (82)
	Stmt1 -> Ident '/=' Expr                           (83)
	Stmt1 -> Ident '%=' Expr                           (84)
	Stmt1 -> Ident '[' Expr ']' '=' '(' Expr ')'       (85)
	Stmt1 -> Ident 'set' '[' Expr ']' 'to' '(' Expr ')'   (86)
	Stmt -> Stmt1                                      (87)
	SpecStmt -> 'swap' '(' Ident ',' Ident ')'         (88)
	SpecStmt -> 'debug' 'assignment' 'enable' Ident    (89)
	SpecStmt -> 'debug' 'assignment' 'disable' Ident   (90)
	SpecStmt -> 'debug' 'reading' 'enable' Ident       (91)
	SpecStmt -> 'debug' 'reading' 'disable' Ident      (92)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'*='           { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	'/='           { PT _ (TS _ 18) }
	';'            { PT _ (TS _ 19) }
	'<'            { PT _ (TS _ 20) }
	'<='           { PT _ (TS _ 21) }
	'='            { PT _ (TS _ 22) }
	'=='           { PT _ (TS _ 23) }
	'>'            { PT _ (TS _ 24) }
	'>='           { PT _ (TS _ 25) }
	'Array'        { PT _ (TS _ 26) }
	'Bool'         { PT _ (TS _ 27) }
	'BoolFunc'     { PT _ (TS _ 28) }
	'Dict'         { PT _ (TS _ 29) }
	'Int'          { PT _ (TS _ 30) }
	'IntFunc'      { PT _ (TS _ 31) }
	'['            { PT _ (TS _ 32) }
	']'            { PT _ (TS _ 33) }
	'and'          { PT _ (TS _ 34) }
	'assignment'   { PT _ (TS _ 35) }
	'break'        { PT _ (TS _ 36) }
	'continue'     { PT _ (TS _ 37) }
	'debug'        { PT _ (TS _ 38) }
	'disable'      { PT _ (TS _ 39) }
	'else'         { PT _ (TS _ 40) }
	'enable'       { PT _ (TS _ 41) }
	'false'        { PT _ (TS _ 42) }
	'for'          { PT _ (TS _ 43) }
	'get'          { PT _ (TS _ 44) }
	'has'          { PT _ (TS _ 45) }
	'if'           { PT _ (TS _ 46) }
	'key'          { PT _ (TS _ 47) }
	'lambda'       { PT _ (TS _ 48) }
	'none'         { PT _ (TS _ 49) }
	'or'           { PT _ (TS _ 50) }
	'outer'        { PT _ (TS _ 51) }
	'print'        { PT _ (TS _ 52) }
	'reading'      { PT _ (TS _ 53) }
	'return'       { PT _ (TS _ 54) }
	'set'          { PT _ (TS _ 55) }
	'skip'         { PT _ (TS _ 56) }
	'swap'         { PT _ (TS _ 57) }
	'to'           { PT _ (TS _ 58) }
	'true'         { PT _ (TS _ 59) }
	'void'         { PT _ (TS _ 60) }
	'while'        { PT _ (TS _ 61) }
	'xor'          { PT _ (TS _ 62) }
	'{'            { PT _ (TS _ 63) }
	'}'            { PT _ (TS _ 64) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pInstr   rule  0
	%start_pExpr    rule  1
	%start_pStmt    rule  2
	%start_pDef     rule  3
	%start_pParams  rule  4
	%start_pArgs    rule  5
	%start_pLambda  rule  6
	%start_pSType   rule  7
	%start_pFType   rule  8
	Ident           rule  9
	Integer         rule  10
	SType           rules 11, 12
	FType           rules 13, 14
	Expr2           rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28
	Expr            rules 29, 30, 31, 32, 33, 34
	Expr1           rules 35, 36, 37, 38, 39, 40, 41, 42, 43, 44
	Args            rules 45, 46, 47, 48, 49
	Params          rules 50, 51, 52, 53, 54
	Lambda          rule  55
	Instr           rules 56, 57
	Instr1          rules 58, 59, 60, 61
	Def1            rules 62, 63, 64, 65, 66
	Def             rule  67
	Stmt1           rules 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86
	Stmt            rule  87
	SpecStmt        rules 88, 89, 90, 91, 92

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pInstr -> . Instr                            (rule 0)

	'Array'        shift, and enter state 42
	'Bool'         shift, and enter state 15
	'BoolFunc'     shift, and enter state 12
	'Dict'         shift, and enter state 43
	'Int'          shift, and enter state 16
	'IntFunc'      shift, and enter state 13
	'break'        shift, and enter state 47
	'continue'     shift, and enter state 48
	'debug'        shift, and enter state 61
	'for'          shift, and enter state 49
	'if'           shift, and enter state 50
	'print'        shift, and enter state 51
	'return'       shift, and enter state 52
	'skip'         shift, and enter state 53
	'swap'         shift, and enter state 62
	'while'        shift, and enter state 54
	L_Ident        shift, and enter state 10

	Ident          goto state 44
	SType          goto state 38
	FType          goto state 39
	Instr          goto state 56
	Instr1         goto state 57
	Def1           goto state 40
	Def            goto state 58
	Stmt1          goto state 45
	Stmt           goto state 59
	SpecStmt       goto state 60

State 1

	%start_pExpr -> . Expr                              (rule 1)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'++'           shift, and enter state 28
	'--'           shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 10
	L_integ        shift, and enter state 33

	Ident          goto state 19
	Integer        goto state 20
	Expr2          goto state 21
	Expr           goto state 55
	Expr1          goto state 23

State 2

	%start_pStmt -> . Stmt                              (rule 2)

	'break'        shift, and enter state 47
	'continue'     shift, and enter state 48
	'for'          shift, and enter state 49
	'if'           shift, and enter state 50
	'print'        shift, and enter state 51
	'return'       shift, and enter state 52
	'skip'         shift, and enter state 53
	'while'        shift, and enter state 54
	L_Ident        shift, and enter state 10

	Ident          goto state 44
	Stmt1          goto state 45
	Stmt           goto state 46

State 3

	%start_pDef -> . Def                                (rule 3)

	'Array'        shift, and enter state 42
	'Bool'         shift, and enter state 15
	'BoolFunc'     shift, and enter state 12
	'Dict'         shift, and enter state 43
	'Int'          shift, and enter state 16
	'IntFunc'      shift, and enter state 13

	SType          goto state 38
	FType          goto state 39
	Def1           goto state 40
	Def            goto state 41

State 4

	%start_pParams -> . Params                          (rule 4)

	'Bool'         shift, and enter state 15
	'BoolFunc'     shift, and enter state 12
	'Int'          shift, and enter state 16
	'IntFunc'      shift, and enter state 13
	'none'         shift, and enter state 37

	SType          goto state 34
	FType          goto state 35
	Params         goto state 36

State 5

	%start_pArgs -> . Args                              (rule 5)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'++'           shift, and enter state 28
	'--'           shift, and enter state 29
	'BoolFunc'     shift, and enter state 12
	'IntFunc'      shift, and enter state 13
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	'void'         shift, and enter state 32
	L_Ident        shift, and enter state 10
	L_integ        shift, and enter state 33

	Ident          goto state 19
	Integer        goto state 20
	FType          goto state 17
	Expr2          goto state 21
	Expr           goto state 22
	Expr1          goto state 23
	Args           goto state 24
	Lambda         goto state 25

State 6

	%start_pLambda -> . Lambda                          (rule 6)

	'BoolFunc'     shift, and enter state 12
	'IntFunc'      shift, and enter state 13

	FType          goto state 17
	Lambda         goto state 18

State 7

	%start_pSType -> . SType                            (rule 7)

	'Bool'         shift, and enter state 15
	'Int'          shift, and enter state 16

	SType          goto state 14

State 8

	%start_pFType -> . FType                            (rule 8)

	'BoolFunc'     shift, and enter state 12
	'IntFunc'      shift, and enter state 13

	FType          goto state 11

State 9

	Ident -> . L_Ident                                  (rule 9)

	L_Ident        shift, and enter state 10


State 10

	Ident -> L_Ident .                                  (rule 9)

	'!='           reduce using rule 9
	'%'            reduce using rule 9
	'%='           reduce using rule 9
	'('            reduce using rule 9
	')'            reduce using rule 9
	'*'            reduce using rule 9
	'*='           reduce using rule 9
	'+'            reduce using rule 9
	'++'           reduce using rule 9
	'+='           reduce using rule 9
	','            reduce using rule 9
	'-'            reduce using rule 9
	'--'           reduce using rule 9
	'-='           reduce using rule 9
	'/'            reduce using rule 9
	'/='           reduce using rule 9
	';'            reduce using rule 9
	'<'            reduce using rule 9
	'<='           reduce using rule 9
	'='            reduce using rule 9
	'=='           reduce using rule 9
	'>'            reduce using rule 9
	'>='           reduce using rule 9
	'['            reduce using rule 9
	']'            reduce using rule 9
	'and'          reduce using rule 9
	'get'          reduce using rule 9
	'has'          reduce using rule 9
	'or'           reduce using rule 9
	'set'          reduce using rule 9
	'to'           reduce using rule 9
	'xor'          reduce using rule 9
	'}'            reduce using rule 9
	%eof           reduce using rule 9


State 11

	%start_pFType -> FType .                            (rule 8)

	%eof           accept


State 12

	FType -> 'BoolFunc' .                               (rule 14)

	'lambda'       reduce using rule 14
	L_Ident        reduce using rule 14
	%eof           reduce using rule 14


State 13

	FType -> 'IntFunc' .                                (rule 13)

	'lambda'       reduce using rule 13
	L_Ident        reduce using rule 13
	%eof           reduce using rule 13


State 14

	%start_pSType -> SType .                            (rule 7)

	%eof           accept


State 15

	SType -> 'Bool' .                                   (rule 12)

	L_Ident        reduce using rule 12
	%eof           reduce using rule 12


State 16

	SType -> 'Int' .                                    (rule 11)

	L_Ident        reduce using rule 11
	%eof           reduce using rule 11


State 17

	Lambda -> FType . 'lambda' '(' Params ')' '->' '{' Instr '}'    (rule 55)

	'lambda'       shift, and enter state 114


State 18

	%start_pLambda -> Lambda .                          (rule 6)

	%eof           accept


State 19

	Expr2 -> Ident . '(' Args ')'                       (rule 15)
	Expr2 -> Ident .                                    (rule 16)
	Expr2 -> Ident . '++'                               (rule 18)
	Expr2 -> Ident . '--'                               (rule 20)
	Expr2 -> Ident . '[' Expr ']'                       (rule 22)
	Expr2 -> Ident . 'get' '[' Expr ']'                 (rule 23)
	Expr2 -> Ident . 'has' 'key' '[' Expr ']'           (rule 28)

	'!='           reduce using rule 16
	'%'            reduce using rule 16
	'('            shift, and enter state 108
	')'            reduce using rule 16
	'*'            reduce using rule 16
	'+'            reduce using rule 16
	'++'           shift, and enter state 109
	','            reduce using rule 16
	'-'            reduce using rule 16
	'--'           shift, and enter state 110
	'/'            reduce using rule 16
	';'            reduce using rule 16
	'<'            reduce using rule 16
	'<='           reduce using rule 16
	'=='           reduce using rule 16
	'>'            reduce using rule 16
	'>='           reduce using rule 16
	'['            shift, and enter state 111
	']'            reduce using rule 16
	'and'          reduce using rule 16
	'get'          shift, and enter state 112
	'has'          shift, and enter state 113
	'or'           reduce using rule 16
	'to'           reduce using rule 16
	'xor'          reduce using rule 16
	'}'            reduce using rule 16
	%eof           reduce using rule 16


State 20

	Expr2 -> Integer .                                  (rule 17)

	'!='           reduce using rule 17
	'%'            reduce using rule 17
	')'            reduce using rule 17
	'*'            reduce using rule 17
	'+'            reduce using rule 17
	','            reduce using rule 17
	'-'            reduce using rule 17
	'/'            reduce using rule 17
	';'            reduce using rule 17
	'<'            reduce using rule 17
	'<='           reduce using rule 17
	'=='           reduce using rule 17
	'>'            reduce using rule 17
	'>='           reduce using rule 17
	']'            reduce using rule 17
	'and'          reduce using rule 17
	'or'           reduce using rule 17
	'to'           reduce using rule 17
	'xor'          reduce using rule 17
	'}'            reduce using rule 17
	%eof           reduce using rule 17


State 21

	Expr1 -> Expr2 .                                    (rule 38)

	'!='           reduce using rule 38
	'%'            reduce using rule 38
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	','            reduce using rule 38
	'-'            reduce using rule 38
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	']'            reduce using rule 38
	'and'          reduce using rule 38
	'or'           reduce using rule 38
	'to'           reduce using rule 38
	'xor'          reduce using rule 38
	'}'            reduce using rule 38
	%eof           reduce using rule 38


State 22

	Expr -> Expr . '+' Expr1                            (rule 29)
	Expr -> Expr . '-' Expr1                            (rule 30)
	Expr -> Expr . 'or' Expr1                           (rule 32)
	Expr -> Expr . 'and' Expr1                          (rule 33)
	Expr -> Expr . 'xor' Expr1                          (rule 34)
	Args -> Expr .                                      (rule 46)
	Args -> Expr . ',' Args                             (rule 47)

	')'            reduce using rule 46
	'+'            shift, and enter state 67
	','            shift, and enter state 107
	'-'            shift, and enter state 68
	'and'          shift, and enter state 69
	'or'           shift, and enter state 70
	'xor'          shift, and enter state 71
	%eof           reduce using rule 46


State 23

	Expr -> Expr1 .                                     (rule 31)
	Expr1 -> Expr1 . '/' Expr2                          (rule 35)
	Expr1 -> Expr1 . '*' Expr2                          (rule 36)
	Expr1 -> Expr1 . '%' Expr2                          (rule 37)
	Expr1 -> Expr1 . '==' Expr2                         (rule 39)
	Expr1 -> Expr1 . '<=' Expr2                         (rule 40)
	Expr1 -> Expr1 . '>=' Expr2                         (rule 41)
	Expr1 -> Expr1 . '<' Expr2                          (rule 42)
	Expr1 -> Expr1 . '>' Expr2                          (rule 43)
	Expr1 -> Expr1 . '!=' Expr2                         (rule 44)

	'!='           shift, and enter state 98
	'%'            shift, and enter state 99
	')'            reduce using rule 31
	'*'            shift, and enter state 100
	'+'            reduce using rule 31
	','            reduce using rule 31
	'-'            reduce using rule 31
	'/'            shift, and enter state 101
	';'            reduce using rule 31
	'<'            shift, and enter state 102
	'<='           shift, and enter state 103
	'=='           shift, and enter state 104
	'>'            shift, and enter state 105
	'>='           shift, and enter state 106
	']'            reduce using rule 31
	'and'          reduce using rule 31
	'or'           reduce using rule 31
	'to'           reduce using rule 31
	'xor'          reduce using rule 31
	'}'            reduce using rule 31
	%eof           reduce using rule 31


State 24

	%start_pArgs -> Args .                              (rule 5)

	%eof           accept


State 25

	Args -> Lambda .                                    (rule 48)
	Args -> Lambda . ',' Args                           (rule 49)

	')'            reduce using rule 48
	','            shift, and enter state 97
	%eof           reduce using rule 48


State 26

	Expr2 -> '!' . Expr2                                (rule 27)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'++'           shift, and enter state 28
	'--'           shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 10
	L_integ        shift, and enter state 33

	Ident          goto state 19
	Integer        goto state 20
	Expr2          goto state 96

State 27

	Expr2 -> '(' . Expr ')'                             (rule 24)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'++'           shift, and enter state 28
	'--'           shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 10
	L_integ        shift, and enter state 33

	Ident          goto state 19
	Integer        goto state 20
	Expr2          goto state 21
	Expr           goto state 95
	Expr1          goto state 23

State 28

	Expr2 -> '++' . Ident                               (rule 19)

	L_Ident        shift, and enter state 10

	Ident          goto state 94

State 29

	Expr2 -> '--' . Ident                               (rule 21)

	L_Ident        shift, and enter state 10

	Ident          goto state 93

State 30

	Expr2 -> 'false' .                                  (rule 26)

	'!='           reduce using rule 26
	'%'            reduce using rule 26
	')'            reduce using rule 26
	'*'            reduce using rule 26
	'+'            reduce using rule 26
	','            reduce using rule 26
	'-'            reduce using rule 26
	'/'            reduce using rule 26
	';'            reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'=='           reduce using rule 26
	'>'            reduce using rule 26
	'>='           reduce using rule 26
	']'            reduce using rule 26
	'and'          reduce using rule 26
	'or'           reduce using rule 26
	'to'           reduce using rule 26
	'xor'          reduce using rule 26
	'}'            reduce using rule 26
	%eof           reduce using rule 26


State 31

	Expr2 -> 'true' .                                   (rule 25)

	'!='           reduce using rule 25
	'%'            reduce using rule 25
	')'            reduce using rule 25
	'*'            reduce using rule 25
	'+'            reduce using rule 25
	','            reduce using rule 25
	'-'            reduce using rule 25
	'/'            reduce using rule 25
	';'            reduce using rule 25
	'<'            reduce using rule 25
	'<='           reduce using rule 25
	'=='           reduce using rule 25
	'>'            reduce using rule 25
	'>='           reduce using rule 25
	']'            reduce using rule 25
	'and'          reduce using rule 25
	'or'           reduce using rule 25
	'to'           reduce using rule 25
	'xor'          reduce using rule 25
	'}'            reduce using rule 25
	%eof           reduce using rule 25


State 32

	Args -> 'void' .                                    (rule 45)

	')'            reduce using rule 45
	%eof           reduce using rule 45


State 33

	Integer -> L_integ .                                (rule 10)

	'!='           reduce using rule 10
	'%'            reduce using rule 10
	')'            reduce using rule 10
	'*'            reduce using rule 10
	'+'            reduce using rule 10
	','            reduce using rule 10
	'-'            reduce using rule 10
	'/'            reduce using rule 10
	';'            reduce using rule 10
	'<'            reduce using rule 10
	'<='           reduce using rule 10
	'=='           reduce using rule 10
	'>'            reduce using rule 10
	'>='           reduce using rule 10
	']'            reduce using rule 10
	'and'          reduce using rule 10
	'or'           reduce using rule 10
	'to'           reduce using rule 10
	'xor'          reduce using rule 10
	'}'            reduce using rule 10
	%eof           reduce using rule 10


State 34

	Params -> SType . Ident                             (rule 51)
	Params -> SType . Ident ',' Params                  (rule 53)

	L_Ident        shift, and enter state 10

	Ident          goto state 92

State 35

	Params -> FType . Ident                             (rule 52)
	Params -> FType . Ident ',' Params                  (rule 54)

	L_Ident        shift, and enter state 10

	Ident          goto state 91

State 36

	%start_pParams -> Params .                          (rule 4)

	%eof           accept


State 37

	Params -> 'none' .                                  (rule 50)

	')'            reduce using rule 50
	%eof           reduce using rule 50


State 38

	Def1 -> SType . Ident '=' Expr                      (rule 62)

	L_Ident        shift, and enter state 10

	Ident          goto state 90

State 39

	Def1 -> FType . Ident '(' Params ')' '{' Instr '}'    (rule 63)

	L_Ident        shift, and enter state 10

	Ident          goto state 89

State 40

	Def -> Def1 .                                       (rule 67)

	';'            reduce using rule 67
	'}'            reduce using rule 67
	%eof           reduce using rule 67


State 41

	%start_pDef -> Def .                                (rule 3)

	%eof           accept


State 42

	Def1 -> 'Array' . SType Ident '[' Expr ']' '(' Expr ')'    (rule 64)
	Def1 -> 'Array' . SType Ident '[' Expr ']'          (rule 65)

	'Bool'         shift, and enter state 15
	'Int'          shift, and enter state 16

	SType          goto state 88

State 43

	Def1 -> 'Dict' . SType Ident                        (rule 66)

	'Bool'         shift, and enter state 15
	'Int'          shift, and enter state 16

	SType          goto state 87

State 44

	Stmt1 -> Ident . '=' Expr                           (rule 79)
	Stmt1 -> Ident . '+=' Expr                          (rule 80)
	Stmt1 -> Ident . '-=' Expr                          (rule 81)
	Stmt1 -> Ident . '*=' Expr                          (rule 82)
	Stmt1 -> Ident . '/=' Expr                          (rule 83)
	Stmt1 -> Ident . '%=' Expr                          (rule 84)
	Stmt1 -> Ident . '[' Expr ']' '=' '(' Expr ')'      (rule 85)
	Stmt1 -> Ident . 'set' '[' Expr ']' 'to' '(' Expr ')'    (rule 86)

	'%='           shift, and enter state 79
	'*='           shift, and enter state 80
	'+='           shift, and enter state 81
	'-='           shift, and enter state 82
	'/='           shift, and enter state 83
	'='            shift, and enter state 84
	'['            shift, and enter state 85
	'set'          shift, and enter state 86


State 45

	Stmt -> Stmt1 .                                     (rule 87)

	';'            reduce using rule 87
	'}'            reduce using rule 87
	%eof           reduce using rule 87


State 46

	%start_pStmt -> Stmt .                              (rule 2)

	%eof           accept


State 47

	Stmt1 -> 'break' . '(' Expr ')'                     (rule 75)
	Stmt1 -> 'break' .                                  (rule 76)

	'('            shift, and enter state 78
	';'            reduce using rule 76
	'}'            reduce using rule 76
	%eof           reduce using rule 76


State 48

	Stmt1 -> 'continue' . 'outer' '(' Expr ')'          (rule 77)
	Stmt1 -> 'continue' .                               (rule 78)

	';'            reduce using rule 78
	'outer'        shift, and enter state 77
	'}'            reduce using rule 78
	%eof           reduce using rule 78


State 49

	Stmt1 -> 'for' . '(' Ident '=' Expr 'to' Expr ')' '{' Instr '}'    (rule 71)

	'('            shift, and enter state 76


State 50

	Stmt1 -> 'if' . '(' Expr ')' '{' Instr '}' 'else' '{' Instr '}'    (rule 68)
	Stmt1 -> 'if' . '(' Expr ')' '{' Instr '}'          (rule 69)

	'('            shift, and enter state 75


State 51

	Stmt1 -> 'print' . '(' Expr ')'                     (rule 74)

	'('            shift, and enter state 74


State 52

	Stmt1 -> 'return' . '(' Expr ')'                    (rule 73)

	'('            shift, and enter state 73


State 53

	Stmt1 -> 'skip' .                                   (rule 72)

	';'            reduce using rule 72
	'}'            reduce using rule 72
	%eof           reduce using rule 72


State 54

	Stmt1 -> 'while' . '(' Expr ')' '{' Instr '}'       (rule 70)

	'('            shift, and enter state 72


State 55

	%start_pExpr -> Expr .                              (rule 1)
	Expr -> Expr . '+' Expr1                            (rule 29)
	Expr -> Expr . '-' Expr1                            (rule 30)
	Expr -> Expr . 'or' Expr1                           (rule 32)
	Expr -> Expr . 'and' Expr1                          (rule 33)
	Expr -> Expr . 'xor' Expr1                          (rule 34)

	'+'            shift, and enter state 67
	'-'            shift, and enter state 68
	'and'          shift, and enter state 69
	'or'           shift, and enter state 70
	'xor'          shift, and enter state 71
	%eof           accept


State 56

	%start_pInstr -> Instr .                            (rule 0)

	%eof           accept


State 57

	Instr -> Instr1 . ';' Instr                         (rule 56)
	Instr -> Instr1 .                                   (rule 57)
	Instr1 -> Instr1 . ';'                              (rule 61)

	';'            shift, and enter state 66
	'}'            reduce using rule 57
	%eof           reduce using rule 57


State 58

	Instr1 -> Def .                                     (rule 58)

	';'            reduce using rule 58
	'}'            reduce using rule 58
	%eof           reduce using rule 58


State 59

	Instr1 -> Stmt .                                    (rule 59)

	';'            reduce using rule 59
	'}'            reduce using rule 59
	%eof           reduce using rule 59


State 60

	Instr1 -> SpecStmt .                                (rule 60)

	';'            reduce using rule 60
	'}'            reduce using rule 60
	%eof           reduce using rule 60


State 61

	SpecStmt -> 'debug' . 'assignment' 'enable' Ident    (rule 89)
	SpecStmt -> 'debug' . 'assignment' 'disable' Ident    (rule 90)
	SpecStmt -> 'debug' . 'reading' 'enable' Ident      (rule 91)
	SpecStmt -> 'debug' . 'reading' 'disable' Ident     (rule 92)

	'assignment'   shift, and enter state 64
	'reading'      shift, and enter state 65


State 62

	SpecStmt -> 'swap' . '(' Ident ',' Ident ')'        (rule 88)

	'('            shift, and enter state 63


State 63

	SpecStmt -> 'swap' '(' . Ident ',' Ident ')'        (rule 88)

	L_Ident        shift, and enter state 10

	Ident          goto state 163

State 64

	SpecStmt -> 'debug' 'assignment' . 'enable' Ident    (rule 89)
	SpecStmt -> 'debug' 'assignment' . 'disable' Ident    (rule 90)

	'disable'      shift, and enter state 161
	'enable'       shift, and enter state 162


State 65

	SpecStmt -> 'debug' 'reading' . 'enable' Ident      (rule 91)
	SpecStmt -> 'debug' 'reading' . 'disable' Ident     (rule 92)

	'disable'      shift, and enter state 159
	'enable'       shift, and enter state 160


State 66

	Instr -> Instr1 ';' . Instr                         (rule 56)
	Instr1 -> Instr1 ';' .                              (rule 61)

	';'            reduce using rule 61
	'Array'        shift, and enter state 42
	'Bool'         shift, and enter state 15
	'BoolFunc'     shift, and enter state 12
	'Dict'         shift, and enter state 43
	'Int'          shift, and enter state 16
	'IntFunc'      shift, and enter state 13
	'break'        shift, and enter state 47
	'continue'     shift, and enter state 48
	'debug'        shift, and enter state 61
	'for'          shift, and enter state 49
	'if'           shift, and enter state 50
	'print'        shift, and enter state 51
	'return'       shift, and enter state 52
	'skip'         shift, and enter state 53
	'swap'         shift, and enter state 62
	'while'        shift, and enter state 54
	'}'            reduce using rule 61
	L_Ident        shift, and enter state 10
	%eof           reduce using rule 61

	Ident          goto state 44
	SType          goto state 38
	FType          goto state 39
	Instr          goto state 158
	Instr1         goto state 57
	Def1           goto state 40
	Def            goto state 58
	Stmt1          goto state 45
	Stmt           goto state 59
	SpecStmt       goto state 60

State 67

	Expr -> Expr '+' . Expr1                            (rule 29)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'++'           shift, and enter state 28
	'--'           shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 10
	L_integ        shift, and enter state 33

	Ident          goto state 19
	Integer        goto state 20
	Expr2          goto state 21
	Expr1          goto state 157

State 68

	Expr -> Expr '-' . Expr1                            (rule 30)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'++'           shift, and enter state 28
	'--'           shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 10
	L_integ        shift, and enter state 33

	Ident          goto state 19
	Integer        goto state 20
	Expr2          goto state 21
	Expr1          goto state 156

State 69

	Expr -> Expr 'and' . Expr1                          (rule 33)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'++'           shift, and enter state 28
	'--'           shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 10
	L_integ        shift, and enter state 33

	Ident          goto state 19
	Integer        goto state 20
	Expr2          goto state 21
	Expr1          goto state 155

State 70

	Expr -> Expr 'or' . Expr1                           (rule 32)

	'!'            shift, and enter state 26
	'('            shift, and enter state 27
	'++'           shift, and enter state 28
	'--'           shift, and enter state 29
	'false'        shift, and enter state 30
	'true'         shift, and enter state 31
	L_Ident        shift, and enter state 10
	L_integ        shift, and enter state 33
